--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>yt t-rex</title>
+    <title>youtube tracking exposed</title>
   </head>
   <body>
       <div id="main"></div>
