progress in restyling popup

--- a/extension/src/popup/popup.html
+++ b/extension/src/popup/popup.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>youtube tracking exposed</title>
+    <link rel="stylesheet" href="/font.css">
+    <title>youtube.tracking.exposed</title>
   </head>
   <body>
       <div id="main"></div>
