experiments with material upgrade and new settings pane

--- a/extension/src/popup/popup.html
+++ b/extension/src/popup/popup.html
@@ -6,7 +6,7 @@
     <title>youtube.tracking.exposed</title>
   </head>
   <body>
-      <div id="main"></div>
+      <div id="main" style="font-family:'Trex-regular'"></div>
       <script src="popup.js"></script>
   </body>
 </html>
