moved daboard in src folder

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="/font.css">
+    <link rel="stylesheet" href="/styles.css">
     <title>YouChoose — Dashboard</title>
   </head>
   <body>
