--- a/src/embedded/dashboard.html
+++ b/src/embedded/dashboard.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="/font.css">
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="/dashboard.css">
     <title>YouChoose — Dashboard</title>
   </head>
   <body>
-      <div id="ycai--dashboard" style="font-family:'Trex-Regular'"></div>
+      <div id="ycai--dashboard"></div>
       <script src="dashboard.js"></script>
   </body>
 </html>
