format code with prettier

--- a/src/embedded/dashboard.html
+++ b/src/embedded/dashboard.html
@@ -1,9 +1,9 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="/font.css">
-    <link rel="stylesheet" href="/dashboard.css">
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="/font.css" />
+    <link rel="stylesheet" href="/dashboard.css" />
     <title>YouChoose — Dashboard</title>
   </head>
   <body>
