--- a/src/embedded/popup.html
+++ b/src/embedded/popup.html
@@ -1,12 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="/font.css">
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="/font.css" />
     <title>YouChoose</title>
   </head>
   <body>
-      <div id="main" style="font-family:'Trex-Regular'"></div>
-      <script src="popup.js"></script>
+    <div id="main" style="font-family: 'Trex-Regular'"></div>
+    <script src="popup.js"></script>
   </body>
 </html>
