chore: build project with tsc and react-app-rewired

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="/font.css" />
-    <link rel="stylesheet" href="/dashboard.css" />
+    <link rel="stylesheet" href="/css/font.css" />
+    <link rel="stylesheet" href="/css/dashboard.css" />
+    <link rel="stylesheet" href="/css/youchoose-ux.css" />
     <title>YouChoose — Dashboard</title>
   </head>
   <body>
     <div id="ycai--dashboard"></div>
-    <script src="dashboard.js"></script>
   </body>
 </html>
