--- a/public/popup.html
+++ b/public/popup.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="/css/font.css" />
+    <link rel="stylesheet" href="/css/popup.css" />
     <link rel="stylesheet" href="/css/youchoose-ux.css" />
     <title>YouChoose</title>
   </head>
