chord: CSV format fixing, async loop review, index.html trimming

--- a/methodology/static/index.html
+++ b/methodology/static/index.html
@@ -1,6 +1,6 @@
-<form>
+<form style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">
   <h2>
-    Once selected you'll be redirect on Youtube.com, you should <b>accept the cookie banner</b>, and in 10 seconds the browser would close and run in background.
+    <span style="color:coral;font-weight: 900;">README</span>: once you've selected the kind of personalization you want to try, you'll be redirect on Youtube.com — you should <b>accept the cookie banner</b>, and in 30 seconds the browser would close and then run automatically.
   </h2>
   <h1>
     <input type="radio" experimentId="la" name="experiment" id="greta">
@@ -8,8 +8,10 @@
     <input type="radio" experimentId="sa" name="experiment" id="noemi">
     <label for="noemi">Profile you as Noemi</label><br>
   </h1>
-  <hr >
-  <button disabled id="nextstep">
-    Moving to youtube.com
+  <hr />
+  <button disabled style="width:100%" id="nextstep">
+    <h3 style="text-align:'center'">
+       Moving to youtube.com...
+    </h3>
   </button>
 </form>
