--- a/methodology/static/index.html
+++ b/methodology/static/index.html
@@ -3,9 +3,9 @@
     <span style="color:coral;font-weight: 900;">README</span>: once you've selected the kind of personalization you want to try, you'll be redirect on Youtube.com — you should <b>accept the cookie banner</b>, and in 30 seconds the browser would close and then run automatically.
   </h2>
   <h1>
-    <input type="radio" experimentId="la" name="experiment" id="greta">
+    <input type="radio" experimentId="c5e81bcd62a2cbb4637d4f517085d9b8b5f7bbf4" name="experiment" id="greta">
     <label for="greta">Profile you as Greta</label><br>
-    <input type="radio" experimentId="sa" name="experiment" id="noemi">
+    <input type="radio" experimentId="" name="experiment" id="noemi">
     <label for="noemi">Profile you as Noemi</label><br>
   </h1>
   <hr />
