fix: apply style only to dashboard and popup

--- a/public/popup.html
+++ b/public/popup.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/css/popup.css" />
     <title>YouChoose</title>
   </head>
-  <body>
-    <div id="main"></div>
+  <body style="margin:0;padding:0;">
+    <div id="ycai"></div>
   </body>
 </html>
