--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/css/font.css" />
     <link rel="stylesheet" href="%PUBLIC_URL%/css/dashboard.css" />
     <link rel="stylesheet" href="%PUBLIC_URL%/css/youchoose-ux.css" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/ycai128.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -29,9 +29,9 @@
     -->
     <title>YouChoose AI</title>
   </head>
-  <body>
+  <body style="margin: 0;padding: 0;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="ycai--dashboard"></div>
+    <div id="ycai"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
