fix: dashboard height to be 100%

--- a/public/popup.html
+++ b/public/popup.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html id="ycai-popup" lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="/css/youchoose-ux.css" />
     <link rel="stylesheet" href="/css/popup.css" />
     <title>YouChoose</title>
   </head>
-  <body style="margin:0;padding:0;">
+  <body>
     <div id="ycai"></div>
   </body>
 </html>
