--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" id="ycai-dashboard">
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="%PUBLIC_URL%/css/font.css" />
     <link rel="stylesheet" href="%PUBLIC_URL%/css/dashboard.css" />
-    <link rel="stylesheet" href="%PUBLIC_URL%/css/youchoose-ux.css" />
     <link rel="icon" href="%PUBLIC_URL%/ycai128.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
@@ -29,7 +28,7 @@
     -->
     <title>YouChoose AI</title>
   </head>
-  <body style="margin: 0;padding: 0;">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="ycai"></div>
     <!--
