fix: noindex,nofollow meta tags

--- a/YCAI/public/index.html
+++ b/YCAI/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="robots" content="noindex,nofollow">
     <link rel="icon" href="/ycai128.png" />
     <link rel="apple-touch-icon" href="/ycai128.png" />
     <link rel="manifest" href="/manifest.json" />
