refactor: incomplete webpack configuration

--- a/methodology/static/guardoni.html
+++ b/methodology/static/guardoni.html
@@ -1,6 +1,6 @@
 <html>
   <body>
     <div id="guardoni"></div>
-    <script type="text/javascript" src="./guardoni.js"></script>
+    <script type="text/javascript" src="./renderer.js"></script>
   </body>
 </html>
