refactor: move taboule into packages folder

--- a/packages/taboule/public/index.html
+++ b/packages/taboule/public/index.html
@@ -9,9 +9,9 @@
   <body>
     <div id="main"></div>
   </body>
-  <script type="text/javascript" src="./data-table.js"></script>
+  <script type="text/javascript" src="./taboule.js"></script>
   <script type="text/javascript">
-    window.DataTable({
+    window.Taboule({
       node: document.getElementById('main'),
       baseURL: 'https://youchoose.ai/api/',
       query: 'ccRelatedUsers'
