fix: experiment list query support

--- a/packages/taboule/public/index.html
+++ b/packages/taboule/public/index.html
@@ -32,8 +32,8 @@
   </body>
   <script type="text/javascript" src="./taboule.js"></script>
   <script type="text/javascript">
-    var baseURL = 'http://localhost:9000/api/';
-    // var baseURL = 'https://youtube.tracking.exposed/api/';
+    // var baseURL = 'http://localhost:9000/api/';
+    var baseURL = 'https://youtube.tracking.exposed/api/';
 
     const querySelect = document.querySelector('#taboule-query-value');
     const showInputCheckbox = document.querySelector(
