fix: defined summary queries for tik tok

--- a/packages/taboule/public/index.html
+++ b/packages/taboule/public/index.html
@@ -19,8 +19,14 @@
           <option value="personalVideos">Personal Videos</option>
           <option value="personalHomes">Personal Homes</option>
           <option value="personalAds">Personal ADS</option>
-          <option value="getExperimentById" selected>Compare Experiment</option>
-          <option value="getExperimentList" selected>Experiment list</option>
+          <option value="getExperimentById">Compare Experiment</option>
+          <option value="getExperimentList">Experiment list</option>
+          <option value="tikTokPersonalHTMLSummary" selected>
+            TikTok Personal HTML Summary
+          </option>
+          <option value="tikTokPersonalMetadataSummary" selected>
+            TikTok Personal Metadata Summary
+          </option>
         </select>
         <div id="taboule-show-inputs" style="display: inline">
           <label>Show Params Inputs</label>
