fixed the Taboule portion for #301, still missing the route return value fixes

--- a/packages/taboule/public/index.html
+++ b/packages/taboule/public/index.html
@@ -24,10 +24,12 @@
           <option value="tikTokPersonalHTMLSummary">
             TikTok Personal HTML Summary
           </option>
-          <option value="tikTokPersonalMetadataSummary">
-            TikTok Personal Metadata Summary
+          <option value="tikTokPersonalSearch">
+            TikTok Personal Search
           </option>
-          <option value="tikTokSearches" selected>TikTok Searches</option>
+          <option value="tikTokSearches" selected>
+            TikTok (Collective) Searches
+          </option>
         </select>
         <div id="taboule-show-inputs" style="display: inline">
           <label>Show Params Inputs</label>
