fix(taboule): tag codec for supporter in personal stats request

--- a/packages/taboule/public/index.html
+++ b/packages/taboule/public/index.html
@@ -24,9 +24,7 @@
           <option value="tikTokPersonalHTMLSummary">
             TikTok Personal HTML Summary
           </option>
-          <option value="tikTokPersonalSearch">
-            TikTok Personal Search
-          </option>
+          <option value="tikTokPersonalSearch">TikTok Personal Search</option>
           <option value="tikTokSearches" selected>
             TikTok (Collective) Searches
           </option>
@@ -42,7 +40,7 @@
   <script type="text/javascript" src="./taboule.js"></script>
   <script type="text/javascript">
     // var baseURL = 'http://localhost:9000/api/';
-    var baseURL = 'http://localhost:14000/api/';
+    var baseURL = 'http://localhost:9000/api/';
     // var baseURL = 'https://tiktok.tracking.exposed/api/';
     // var baseURL = 'https://youtube.tracking.exposed/api/';
 
@@ -59,7 +57,7 @@
         query: query,
         pageSize: 25,
         initialParams: {
-          publicKey: 'fake-key',
+          publicKey: 'H7AsuUszehN4qKTj2GYYwNNzkJVqUQBRo2wgKevzeUwx',
         },
       });
     };
