fix(taboule): add platform naming to dropdown list

--- a/packages/taboule/public/index.html
+++ b/packages/taboule/public/index.html
@@ -14,13 +14,15 @@
       <h2>Taboule</h2>
       <div>
         <select id="taboule-query-value">
-          <option value="ccRelatedUsers">Content creator Related Users</option>
-          <option value="personalSearches">Personal Searches</option>
-          <option value="personalVideos">Personal Videos</option>
-          <option value="personalHomes">Personal Homes</option>
-          <option value="personalAds">Personal ADS</option>
-          <option value="getExperimentById">Compare Experiment</option>
-          <option value="getExperimentList">Experiment list</option>
+          <option value="ccRelatedUsers">
+            YCAI Content creator Related Users
+          </option>
+          <option value="personalSearches">Youtube Personal Searches</option>
+          <option value="personalVideos">Youtube Personal Videos</option>
+          <option value="personalHomes">Youtube Personal Homes</option>
+          <option value="personalAds">Youtube Personal ADS</option>
+          <option value="getExperimentById">Youtube Compare Experiment</option>
+          <option value="getExperimentList">Youtube Experiment list</option>
           <option value="tikTokPersonalHTMLSummary">
             TikTok Personal HTML Summary
           </option>
