--- a/packages/taboule/public/index.html
+++ b/packages/taboule/public/index.html
@@ -7,6 +7,10 @@
       #taboule-query-value {
         margin: 0 20px 30px 0;
       }
+      #taboule-reload {
+        margin-left: 20px;
+        cursor: pointer;
+      }
     </style>
   </head>
   <body>
@@ -35,6 +39,7 @@
           <label>Show Params Inputs</label>
           <input type="checkbox" checked="true" />
         </div>
+        <button id="taboule-reload">Reload Taboule</button>
       </div>
       <div id="main"></div>
     </div>
@@ -50,6 +55,7 @@
     const showInputCheckbox = document.querySelector(
       '#taboule-show-inputs input'
     );
+    const tabouleReload = document.querySelector('#taboule-reload');
 
     const runTaboule = (query, showInput = false) => {
       window.Taboule({
@@ -64,6 +70,12 @@
       });
     };
 
+    tabouleReload.addEventListener('click', (e) => {
+      runTaboule(
+        querySelect.value,
+        showInputCheckbox.getAttribute('checked') === 'true'
+      );
+    });
     querySelect.addEventListener('change', (e) => {
       runTaboule(
         e.target.value,
