--- a/packages/taboule/public/index.html
+++ b/packages/taboule/public/index.html
@@ -18,15 +18,21 @@
       <h2>Taboule</h2>
       <div>
         <select id="taboule-query-value">
-          <option value="ccRelatedUsers">
+          <option value="YCAIYCAIccRelatedUsers">
             YCAI Content creator Related Users
           </option>
-          <option value="personalSearches">Youtube Personal Searches</option>
-          <option value="personalVideos">Youtube Personal Videos</option>
-          <option value="personalHomes">Youtube Personal Homes</option>
-          <option value="personalAds">Youtube Personal ADS</option>
-          <option value="getExperimentById">Youtube Compare Experiment</option>
-          <option value="getExperimentList">Youtube Experiment list</option>
+          <option value="youtubePersonalSearches">
+            Youtube Personal Searches
+          </option>
+          <option value="youtubePersonalVideos">Youtube Personal Videos</option>
+          <option value="youtubePersonalHomes">Youtube Personal Homes</option>
+          <option value="youtubePersonalAds">Youtube Personal ADS</option>
+          <option value="youtubeGetExperimentById">
+            Youtube Compare Experiment
+          </option>
+          <option value="youtubeGetExperimentList">
+            Youtube Experiment list
+          </option>
           <option value="tikTokPersonalHTMLSummary">
             TikTok Personal HTML Summary
           </option>
@@ -47,7 +53,7 @@
   <script type="text/javascript" src="./taboule.js"></script>
   <script type="text/javascript">
     // var baseURL = 'http://localhost:9000/api/';
-    var baseURL = 'http://localhost:14000/api/';
+    var baseURL = 'http://localhost:9000/api/';
     // var baseURL = 'https://tiktok.tracking.exposed/api/';
     // var baseURL = 'https://youtube.tracking.exposed/api/';
 
