--- a/packages/taboule/public/index.html
+++ b/packages/taboule/public/index.html
@@ -32,7 +32,12 @@
           <option value="tikTokPersonalHTMLSummary">
             TikTok Personal HTML Summary
           </option>
-          <option value="tikTokPersonalSearch">TikTok Personal Search</option>
+          <option value="tikTokPersonalSearch">
+            TikTok Personal Metadata: search
+          </option>
+          <option value="tikTokPersonalNative">
+            TikTok Personal Metadata: native
+          </option>
           <option value="tikTokSearches" selected>
             TikTok (Collective) Searches
           </option>
@@ -48,7 +53,7 @@
   <script type="text/javascript" src="./taboule.js"></script>
   <script type="text/javascript">
     // var baseURL = 'http://localhost:9000/api/';
-    var baseURL = 'http://localhost:9000/api/';
+    var baseURL = 'http://localhost:14000/api/';
     // var baseURL = 'https://tiktok.tracking.exposed/api/';
     // var baseURL = 'https://youtube.tracking.exposed/api/';
 
